--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "almabot",
-  "version": "1.0.0",
-  "description": "",
+  "description": "almabot",
+  "version": "0.0.0",
   "main": "index.js",
   "scripts": {
-    start": "node index.js"
+    "start": "node index.js"
   },
   "author": "geofrano",
-  "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.3.0",
-    "discord.js-commando": "^0.9.0"
+    "discord.js": "11.1.0",
+    "request": "2.81.0"
   }
 }
