--- a/botsettings.json
+++ b/botsettings.json
@@ -1,4 +1,4 @@
 {
-	"token": "NDE2NDIyMjcyNDY3OTkyNTg3.DXEPBw.1uNZFrViwOosX18W_MdB7Z2LDSs",
+	"token": "NDI4NzI1MzY0NTI5ODIzNzQ1.DZ3RPA.cyO66qbUS65O7k-dKzY9nkSms9k",
 	"prefix": "!"
 }
