--- a/botsettings.json
+++ b/botsettings.json
@@ -1,4 +1,4 @@
 {
-	"token": "NDI4NzI1MzY0NTI5ODIzNzQ1.DZ3RPA.cyO66qbUS65O7k-dKzY9nkSms9k",
+	"token": "NDM1MDA4MzMxOTI5ODc4NTI4.DbSt1Q.O1IlFGHN8juSd_gLRRUnQAsTmWI",
 	"prefix": "!"
 }
