--- a/botsettings.json
+++ b/botsettings.json
@@ -1,4 +1,4 @@
 {
-	"token": "NDM1MDA4MzMxOTI5ODc4NTI4.DbSt1Q.O1IlFGHN8juSd_gLRRUnQAsTmWI",
+	"token": "NDM1MDA4MzMxOTI5ODc4NTI4.DbSwXg.3hRzV2u62uYzjYIKMs3J8OK4b78",
 	"prefix": "!"
 }
